--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
+  cursor:context-menu;
   text-align: center;
+
 }
 
 .App-logo {
@@ -15,12 +17,87 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(3px + 2vmin);
   color: white;
 }
 
 .App-link {
   color: #61dafb;
+}
+
+.Tblock{
+  background-color: #f3f3f3;
+  border-bottom:1.5px solid rgb(0, 0, 0);
+  border-top:1.5px solid rgb(0, 0, 0);
+  border-right:2px solid rgb(0, 0, 0);
+  color: #080c0f;
+  align-items:center; 
+  padding: 5px,5px,5px,0px;
+}
+
+.block{
+  background-color: #f3f3f3;
+  border-bottom:1.5px solid rgb(0, 0, 0);
+  border-right:2px solid rgb(0, 0, 0);
+  color: #080c0f;
+  align-items:center; 
+  padding: 5px,5px,5px,5px;
+}
+
+.StudentName{
+  flex-grow: 0;
+  flex-shrink: 0;
+  background-color: #f3f3f3;
+  border: 1.5px solid rgb(0, 0, 0);
+  border-right:  2px solid rgb(0, 0, 0);
+  border-left:  2px solid rgb(0, 0, 0);
+  color: #080c0f;
+  align-items:center; 
+  width:80px;
+
+  padding: 5px,5px,5px,0px;
+}
+
+
+.subBlock{
+  flex-direction: row;
+  caret-color: red;
+  border-top: 1.5px solid rgb(0, 0, 0);
+}
+.indBlock{
+  border-right: 1.5px solid rgb(143, 142, 142);
+}
+.StdindBlock{
+  height:20px;
+  width:22px;
+
+}
+
+.selectionBox{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap
+}
+
+.smallBox{
+  height:20px;
+  width:80px;
+  border: 2px solid rgb(0, 0, 0);
+  
+  
+}
+
+#office.smallBox {
+  background-color: #2a41c2;
+}
+#arts.smallBox {
+  background-color: #ffa705;
+}
+#eastside.smallBox {
+  background-color: #ffff00;
+}
+#associated.smallBox {
+  background-color: #5c389e;
 }
 
 @keyframes App-logo-spin {
