--- a/src/Components/PA/AddNewPASchedule.css
+++ b/src/Components/PA/AddNewPASchedule.css
@@ -3,10 +3,10 @@
     padding: 5px;
     font-size: calc(3px + 2vmin);
     margin: 3px;
-
+    
 }
-input{
-    margin: 3px; 
+input.formAdd{
+ 
     width: 300px;
 }
 
